--- a/.gitconfig
+++ b/.gitconfig
@@ -29,6 +29,7 @@
     pu = push origin -u
     pf = push -f
     rum = pull --rebase upstream master
+    fb = !git checkout master && git pull && git branch -d
 [difftool]
     prompt = false
 [filter "media"]
