Add rebase origin master git alias
Sometimes you just don't have an upstream

Also changed fb to fin since that's what I'm used to at work

--- a/.gitconfig
+++ b/.gitconfig
@@ -27,7 +27,8 @@
     pu = push origin -u
     pf = push -f
     rum = pull --rebase upstream master
-    fb = !git checkout master && git pull && git branch -d
+    rom = pull --rebase origin master
+    fin = !git checkout master && git pull && git branch -d
 [difftool]
     prompt = false
 [filter "media"]
